fix layout issues for product show page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -111,12 +111,7 @@ div.menu-section {
 }
 
 
-// See products.scss for everything in "div.products"
-
-// Bootstrap adjustments
-form.button_to {
-  display: inline;
-}
+// See products.scss for everything in "div.products" or individual product pages
 
 // Table format
 table {
